--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: system-ui;
+  font-family: Inter, system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
@@ -30,4 +30,33 @@ header{
   h1{
     margin: 0;
   }
+}
+
+.card{
+  max-width: 210px;
+  border: 1px solid #F3F3F3;
+  border-radius: 40px;
+  padding: 30px;
+  margin-right: 30px;
+
+  span{
+    text-transform: uppercase;
+    color: #BDBDBD;
+    font-size: 13px;
+  }
+
+  h5{
+    font-weight: 400;
+    font-size: 14;
+  }
+}
+
+.button{
+  background: #FFFFFF;
+  border: 1px solid #F2F2F2;
+  box-sizing: border-box;
+  border-radius: 8px;
+  height: 32px;
+  width: 32px;
+  cursor: pointer;
 }
