--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
+*{
+  font-family: Inter, system-ui;
+}
 body {
   margin: 0;
-  font-family: Inter, system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
@@ -59,4 +61,17 @@ header{
   height: 32px;
   width: 32px;
   cursor: pointer;
+}
+
+.search-block{
+  border: 1px solid #F3F3F3;
+  border-radius: 10px;
+  padding: 0 15px;
+
+  input {
+    border: none;
+    padding: 13px;
+    font-size: 16px;
+    width: 200px;
+  }
 }
