--- a/src/index.scss
+++ b/src/index.scss
@@ -40,6 +40,17 @@ header{
   border-radius: 40px;
   padding: 30px;
   margin-right: 30px;
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+
+  &:hover{
+    box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.06);
+    transform: translateY(-5px);
+  }
+
+  .favorite{
+    cursor: pointer;
+    position: absolute;
+  }
 
   span{
     text-transform: uppercase;
@@ -74,4 +85,111 @@ header{
     font-size: 16px;
     width: 200px;
   }
+}
+
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.drawer{
+  position: absolute;
+  width: 400px;
+  right: 0;
+  height: 100%;
+  background: #FFFFFF;
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  display: flex;
+    flex-direction: column;
+}
+
+.items{
+  flex: 1;
+}
+
+.cartItem{
+  border: 1px solid #F3F3F3;
+  border-radius: 20px;
+  padding: 0 10px 10px 10px;
+  
+  p{
+    font-size: 16px;
+  }
+
+  b{
+    font-size: 14px;
+  }
+
+  .removeBtn{
+    cursor: pointer;
+    opacity: 0.5;
+    transition: opacity 0.15s ease-in-out;
+
+    &:hover{
+      opacity: 1;
+    }
+  }
+}
+
+.cartTotalBlock{
+  ul{
+    margin-bottom: 25px !important;
+
+    li{
+      display: flex;
+      margin-bottom: 15px;
+  
+      div{
+        flex: 1;
+        border-bottom: 1px dashed #dfdfdf;
+        margin: 0 8px;
+      }
+    }
+  }
+
+  .greenButton{
+    position: relative;
+
+    &:hover{
+      img{
+        transform:  translateX(5px);
+      }
+    }
+
+    img{
+      position: absolute;
+      right: 30px;
+      top: 21px;
+      transition: transform 0.2s ease-in-out;
+      
+    }
+  }
+  
+}
+
+.greenButton{
+    width: 100%;
+    height: 55px;
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    background: #9DD558;
+    border-radius: 18px;
+    cursor: pointer;
+    transition: background 0.1s ease-in-out;
+
+    &:hover{
+      background: lighten( #9dd558, 5%);
+    }
+
+    &:active{
+      background: darken( #9dd558, 5%);
+    }
 }
