--- a/src/index.scss
+++ b/src/index.scss
@@ -57,6 +57,7 @@ header{
     width: 245px;
     margin-top: 20px;
 
+
     &:hover{
       img{
         transform: rotate(180deg) translateX(3px);
@@ -168,6 +169,10 @@ header{
   .greenButton{
     position: relative;
 
+    &:disabled{
+      animation: button-loading 0.6s ease-in-out infinite;
+    }
+
     &:hover{
       img{
         transform:  translateX(5px);
@@ -197,6 +202,11 @@ header{
     cursor: pointer;
     transition: background 0.1s ease-in-out;
 
+    &:disabled{
+      background: #bebebe;
+      cursor: default;
+    }
+
     &:hover{
       background: lighten( #9dd558, 5%);
     }
@@ -204,4 +214,16 @@ header{
     &:active{
       background: darken( #9dd558, 5%);
     }
+}
+
+@keyframes button-loading {
+  0%{
+    opacity: 1;
+  }
+  50%{
+    opacity: 0.7;
+  }
+  100%{
+    opacity: 1;
+  }
 }
